fixed vh on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     --default-font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+    min-height: -webkit-fill-available;
+}
+
 body {
     background: linear-gradient(-45deg, #000000, #3f3f3f, #131430, #0d1b27);
     background-size: 400% 400%;
@@ -15,6 +19,7 @@ body {
     grid-template-rows: 1fr 5fr;
     align-items: start;
     height: 100vh;
+    min-height: -webkit-fill-available;
 }
 
 @keyframes gradient {
